# setGame

./: LICENSE  package.json  setGame.cabal  tsconfig.json
executable/: Main.hs  SetGameWeb.hs
executable/SetGameWeb/: Data.hs
src/: Attributes.hs  Cards.hs  Main.hs  PlayGame.hs
static/src/: application.ts  cardGame.ts
test/: Main.hs  test.hs
views/: index.html
