name:                setGame

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            An implementation of the Set game in Haskell
homepage:            n/a
license:             MIT
license-file:        LICENSE
author:              Chris Wilhelm
maintainer:          chris.wilhelm@gmail.com
category:            Game
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:


cabal-version:       >=1.10

library
    build-depends:
        base -any,
        random-shuffle == 0.0.4,
        random
    exposed-modules:
        SetGame
        SetGame.PlayGame
        SetGame.Cards
        SetGame.Attributes
    exposed: True
    default-language: Haskell2010
    hs-source-dirs: library

executable setGame
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base -any,
                       setGame -any
  hs-source-dirs:      executable
  default-language:    Haskell2010

test-suite hspec
  ghc-options:      -Wall -fno-warn-orphans
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:    base -any,
                    setGame,
                    hspec
  default-language: Haskell2010
